--- a/Newgame/app/src/main/AndroidManifest.xml
+++ b/Newgame/app/src/main/AndroidManifest.xml
@@ -17,9 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GeneratorActivity">
-
-        </activity>
+        <activity android:name=".GeneratorActivity"></activity>
+        <activity android:name=".GameActivity"></activity>
     </application>
 
 </manifest>
