--- a/Newgame/app/src/main/AndroidManifest.xml
+++ b/Newgame/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".GeneratorActivity"></activity>
         <activity android:name=".GameActivity"></activity>
+        <activity android:name=".DimensionActivity"></activity>
     </application>
 
 </manifest>
