--- a/Newgame/app/src/main/AndroidManifest.xml
+++ b/Newgame/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".GeneratorActivity"></activity>
         <activity android:name=".GameActivity"></activity>
         <activity android:name=".DimensionActivity"></activity>
+        <activity android:name=".BoardsActivity"></activity>
     </application>
 
 </manifest>
