--- a/Newgame/app/build.gradle
+++ b/Newgame/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
 }
