--- a/Newgame/app/src/main/AndroidManifest.xml
+++ b/Newgame/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".GameActivity"></activity>
         <activity android:name=".DimensionActivity"></activity>
         <activity android:name=".BoardsActivity"></activity>
+        <activity android:name=".CongratulationActivity"></activity>
     </application>
 
 </manifest>
