--- a/Newgame/app/src/main/AndroidManifest.xml
+++ b/Newgame/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".DimensionActivity"></activity>
         <activity android:name=".BoardsActivity"></activity>
         <activity android:name=".CongratulationActivity"></activity>
+        <activity android:name=".Statictics"></activity>
     </application>
 
 </manifest>
