--- a/Newgame/app/build.gradle
+++ b/Newgame/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 26
@@ -31,8 +32,12 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.firebaseui:firebase-ui-auth:3.2.2'
+    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+        transitive = true
+    }
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
