Add rules fragment and settings activity

--- a/Newgame/app/src/main/AndroidManifest.xml
+++ b/Newgame/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".GameActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,14 +18,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".GeneratorActivity"></activity>
-        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".DimensionActivity"></activity>
         <activity android:name=".BoardsActivity"></activity>
         <activity android:name=".CongratulationActivity"></activity>
-        <activity android:name=".Statictics"></activity>
+        <activity android:name=".StatisticsActivity"></activity>
         <activity android:name=".firebaseauth.ChooserActivity"></activity>
         <activity android:name=".firebaseauth.FirebaseUIActivity"></activity>
         <activity android:name=".firebaseauth.GoogleSignInActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
