--- a/Newgame/app/build.gradle
+++ b/Newgame/app/build.gradle
@@ -27,13 +27,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.3'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
-    compile 'com.google.firebase:firebase-core:11.8.0'
-    compile 'com.google.firebase:firebase-auth:11.8.0'
-    compile 'com.google.firebase:firebase-database:11.8.0'
-    compile 'com.google.android.gms:play-services-auth:11.8.0'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.google.firebase:firebase-core:15.0.0'
+    compile 'com.google.firebase:firebase-auth:15.0.0'
+    compile 'com.google.firebase:firebase-database:15.0.0'
+    compile 'com.google.android.gms:play-services-auth:15.0.0'
     compile 'com.firebaseui:firebase-ui-auth:3.2.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true
