--- a/Newgame/app/src/main/AndroidManifest.xml
+++ b/Newgame/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
     package="sudoku.newgame">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".GeneratorActivity"></activity>
+        <activity android:name=".LeaderboardActivity"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".DimensionActivity"></activity>
         <activity android:name=".BoardsActivity"></activity>
@@ -28,5 +29,4 @@
         <activity android:name=".firebaseauth.GoogleSignInActivity"></activity>
         <activity android:name=".SettingsActivity"></activity>
     </application>
-
 </manifest>
