--- a/Newgame/app/build.gradle
+++ b/Newgame/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:15.0.0'
     compile 'com.google.android.gms:play-services-auth:15.0.0'
     compile 'com.firebaseui:firebase-ui-auth:3.2.2'
+    compile 'com.google.firebase:firebase-ads:15.0.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true
     }
